# cs100-pa4

./: '  .gitignore  .nfs00000000051c4153000022a0  :  apple.txt  banana.txt  goodbye.txt  meson.build  ref_linkpredictor  ref_movietraveler  ref_pathfinder
data/: imdb_small_sample.tsv  test_actors.tsv  test_actors1.tsv
src/: linkpredictor.cpp  meson.build  movietraveler.cpp  pathfinder.cpp
src/ActorGraph/: .Actor.hpp.swp  Actor.hpp  ActorGraph.cpp  ActorGraph.hpp  Movie.hpp  meson.build
test/: test_AutoGraph.cpp
