subdir('ActorGraph')

pathfinder_exe = executable('pathfinder.cpp.executable', 
	sources : ['pathfinder.cpp'],
	dependencies : [actor_graph_dep],
	install : true)
linkpredictor_exe = executable('linkpredictor.cpp.executable',
	sources : ['linkpredictor.cpp'],
	dependencies : [actor_graph_dep],
	install : true)
